# Asteroids

./: .gitignore  README.md  alien.py  asteroid.py  asteroidfield.py  background.py  blackhole.py  circleshape.py  collision.py  colors.py  constants.py  hud.py  input_manager.py  main.py  particles.py  player.py  powerup.py  pyproject.toml  scoreboard.py  screen_effects.py  shot.py  vfx.py  weapons.py
.github/workflows/: ci.yml  release.yml
audio/: __init__.py  audio_manager.py  music_generator.py  sound_effects.py  sound_generator.py
scenes/: __init__.py  game_over_scene.py  pause_scene.py  playing_scene.py  scene_manager.py  title_scene.py
tests/: conftest.py
tests/integration/: test_game_loop.py  test_scene_transitions.py
tests/security/: test_code_safety.py
tests/system/: test_memory.py  test_performance.py  test_stability.py
tests/unit/: test_alien.py  test_asteroid.py  test_audio.py  test_blackhole.py  test_circleshape.py  test_collision.py  test_input_manager.py  test_player.py  test_scoreboard.py  test_scoring.py  test_shot.py  test_weapons.py
